# VRoom

./: .gitignore  .gitmodules  .modalignore  App-Backend.md  GP_DOCUMENT.md  Makefile  README.md  environment_masks.yml  environment_pipeline.yml  export_ply.py  extract_object_meshes  extract_object_meshes.py  extract_refined_mesh.py  full_pipeline_runner.py  generate_sdf.py  marching_cubes.py  mobile app implementation plan.md  pyproject.toml  refine_all_objects.py  run_vroom_pipeline.py  run_vroom_pipeline_m3_m4.py  sfm_label_runner.py  train.py  utils.py
App-Backend/: .env.example  README.md  generate_ymls.py  modal_app.py  requirements.txt
App-Backend/app/: __init__.py  config.py  dependencies.py  main.py  security.py
Mobile-APP/: .gitignore  App.tsx  app.json  eslint.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
Mobile-APP/meshes/: super_clean.glb
Module-1/: README.md  colmap_loader.py  colmap_runner.py  mask_processor.py  metric_bundle.py  module1_runner.py  object_tracker.py  sam_inference.py  sim3_alignment.py  vote.py
Module1/: README.md  colmap_loader.py  mask_processor.py  module1_runner.py  object_tracker.py  opencv_scratch.py  sam_inference.py
Module2/utils/: object_scope.py
Module4/: export_ply.py  extract_object_meshes.py  generate_sdf.py  generate_sdf_re.py  mc_tables.py  mobile_app_implementation_plan.md  ply_to_glb.py  utils.py  visualize_bbox.py  visualize_depth.py  visualize_semantics.py
ModuleTBD/: __main__.py  colmap_init.py  constants.py  dataset_builder.py  hallucination.py  pipeline.py  trainer.py  view_generation.py  view_selection.py
ModuleTBD/debug/: __init__.py  debug_audit.py  debug_compare.py  debug_extraction.py  debug_frame_scoring.py  debug_novel_views.py  debug_scope.py  debug_supervision.py  projection_audit.py  supervision_audit.py
ModuleTBD/utils/: colmap_init.py  helpers.py  scene_analysis.py  sv3d_prior.py  sv3d_wrapper.py  transforms.py
diff-surfel-rasterization/: .gitignore  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
diff-surfel-rasterization/cuda_rasterizer/: __init__.py  auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  tile_ops.cu  tile_ops.h  utils.py
diff-surfel-rasterization/cuda_rasterizer_rewrite/: __init__.py
diff-surfel-rasterization/diff_surfel_rasterization/: __init__.py
diff-surfel-rasterization/tests/: test_backward_parity.py  test_forward_parity.py  test_rasterizer.py
environments/: install_colmap_linux.sh  linux_environment_masks.yml  linux_environment_pipeline.yml
examples/: sdf_shapes.py
gs-train/: trainer.py
gstrain/: trainer.py
masks_and_tracking/: README.md  helpers.py  mask_processor.py  object_tracker.py  opencv_scratch.py  opencv_vroom.py  runner.py  sam_inference.py  tracker_defaults.py  vote.py
mesh_generation/: extract_mesh_inputs.py  extract_object_meshes.py  marching_cubes.py
object_isolation/: __init__.py  build_dataset.py  extraction.py  extraction_real.py  metric_cage.py  paths.py  pose_alignment.py  reference_picker.py  run_all_phases.py  run_isolation.py  run_phase6.py  run_phase678.py  run_phases.py  run_pipeline.py  run_training.py  visualize.py  zero123_input_prep.py  zero123_runner.py
object_refiner/: __main__.py  config.py  constants.py  dataset_builder.py  pipeline.py  trainer.py  view_generation.py  view_selection.py
sfm/: README.md  colmap_loader.py  colmap_runner.py
target_replenishment/: __init__.py  audit_object_scale.py  augment_and_train.py  generate_comparison.py  generate_object_id_sheet.py  render_360.py  run_replenishment.py
(+313 files in other folders)
