[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vroom"
version = "0.1.0"
requires-python = ">=3.9"




# Explicit list of every importable package (folder with __init__.py).
# Keep this in sync when you add new sub-packages.
[tool.setuptools]
packages = [
    # gstrain  →  import gstrain ...
    "gstrain",
    "gstrain.gaussian_renderer",
    "gstrain.vroom_core",
    "gstrain.vroom_core.data",
    "gstrain.vroom_core.export",
    "gstrain.vroom_core.models",
    "gstrain.vroom_core.training",
    "gstrain.vroom_core.utils",
    "gstrain.vroom_core.viewer",

    # masks_and_tracking  →  import masks_and_tracking ...
    "masks_and_tracking",

    # object_refiner  →  import object_refiner ...
    "object_refiner",
    "object_refiner.utils",
    "object_refiner.debug",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search_path = [
    "D:\\conda_envs\\objectgs\\Lib\\site-packages",
]
